--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -3,14 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
+
         <Label Content="Product:" HorizontalAlignment="Left" Height="30" Margin="46,37,0,0" VerticalAlignment="Top" Width="61"/>
         <Label Content="Price $:" HorizontalAlignment="Left" Height="30" Margin="46,78,0,0" VerticalAlignment="Top" Width="61"/>
         <Label Content="Quantity:" HorizontalAlignment="Left" Height="30" Margin="48,113,0,0" VerticalAlignment="Top" Width="69" RenderTransformOrigin="0.371,0.498"/>
         <Label Content="Total Payment $:" HorizontalAlignment="Left" Height="30" Margin="46,160,0,0" VerticalAlignment="Top" Width="96"/>
-        <StackPanel VerticalAlignment="Bottom" Orientation="Horizontal">
-            <Label Content="Total Charge after adding &#xD;&#xA;the delivery charge ($25):" Width="150" Foreground="Black"  Margin="40" HorizontalAlignment="Left" Height="44"/>
-            <TextBlock x:Name="totalChargeTextBlock" Text="" Width="50" Height="50"/>
-        </StackPanel>        
+        <Label Content="Total Charge after adding &#xA;the delivery charge ($25):" Width="150" VerticalAlignment="Bottom" Foreground="Black"  Margin="40,100" HorizontalAlignment="Left" Height="44"/>
+        <TextBlock x:Name="totalChargeTextBlock" Text="" Width="50" Margin="40, 100" Height="50" VerticalAlignment="Bottom"/>
+            
+                <Label Content="Total charge after &#xD;&#xA;adding the wrap charge:" Width="150" Foreground="Black"  Margin="40" VerticalAlignment="Bottom" HorizontalAlignment="Left" Height="44"/>
+        <TextBlock x:Name="totalWrapChargeTextBlock" Text="" Width="50" Height="50" Margin="40" VerticalAlignment="Bottom"/>
+                   
         <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="164,167,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
         <TextBox Name="productTextBox" HorizontalAlignment="Left" Height="24" Margin="122,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="96"/>
         <TextBox Name="priceTextBox" HorizontalAlignment="Left" Height="24" Margin="122,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
